# Masterarbeit

./: .gitignore  AGENTS.md  MIGRATION_PLAN.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/identifier_schemas/: dicom-prototype.json
docs/: README.md  dicom-injection.md  fable-work-packages.md  pdf-template-injection-plan.md  scrabblegan-implementation-plan.md
docs/architecture/: adapter-contract.md  determinism-audit.md  domain-model-spec.md  identifier-schema-spec.md  pixel-injection-decomposition.md  schema-changelog.md  target-architecture.md
docs/archive/: MIGRATION_PLAN.md
docs/decisions/: ADR-0001-prototype-ground-truth-schema.md  ADR-0002-windows-font-paths.md  ADR-0003-synthetic-prefix-conventions.md  ADR-0004-dual-run-json-artifacts.md  ADR-0005-canonical-pydantic-domain-model.md  ADR-0006-format-adapter-contract.md  ADR-0007-identifier-schema-externalization.md  ADR-0008-schema-versioning-strategy.md  ADR-0009-determinism-contract.md  README.md
docs/research/: README.md
docs/templates/: decision.md  finding.md  thesis-claim.md
docs/thesis/: README.md  chapter-map.md  claim-register.md
prototypes/: README.md  prototype_plan.md
prototypes/dicom/: README.md  dicom_writer.py  identity.py  inject.py  pixel_injection.py  view.py
src/injection_pipeline/: __init__.py  __main__.py  api.py  cli.py  runner.py
tests/fixtures/: __init__.py  synthetic_documents.py
tests/integration/: test_end_to_end.py
tests/unit/: test_adapters.py  test_annotations_schema.py  test_api.py  test_handwriting_asset_rendering.py  test_handwriting_cli.py  test_handwriting_integration.py  test_handwriting_provider.py  test_identifier_schema.py  test_inject_default_input.py  test_models.py  test_overlay_reuse.py  test_package.py  test_pdf_adapters.py  test_pdf_cli.py  test_pdf_fixtures.py  test_pdf_geometry.py  test_pixel_injection_corners.py  test_preview_cli.py  test_scrabblegan_generator.py  test_seeding.py
tools/handwriting/: README.md
(+87 files in other folders)
