[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injection-pipeline"
version = "0.1.0"
description = "Scalable pipeline for injecting synthetic PII into anonymized medical documents"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "pydicom>=2.4",
    "pandas>=2.0",
    "pandas-stubs>=2.0",
    "faker>=25.0",
    "matplotlib>=3.10.8",
]

[project.scripts]
injection-pipeline = "injection_pipeline.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/injection_pipeline"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = "injection_pipeline.engine.pixel_injection"
# TODO(phase-2): tighten typing when the document model replaces dict payloads.
disable_error_code = ["arg-type", "attr-defined", "no-any-return"]
